; ModuleID = '/home/carl/AnghaBench/esp-idf/components/driver/extr_i2s.c_i2s_enable_tx_intr.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/driver/extr_i2s.c_i2s_enable_tx_intr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32, i32 }

@I2S = common dso_local global %struct.TYPE_4__** null, align 8
@ESP_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @i2s_enable_tx_intr(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = call i32 (...) @I2S_ENTER_CRITICAL()
  %4 = load %struct.TYPE_4__**, %struct.TYPE_4__*** @I2S, align 8
  %5 = load i64, i64* %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_4__*, %struct.TYPE_4__** %4, i64 %5
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  store i32 1, i32* %9, align 4
  %10 = load %struct.TYPE_4__**, %struct.TYPE_4__*** @I2S, align 8
  %11 = load i64, i64* %2, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__*, %struct.TYPE_4__** %10, i64 %11
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 1
  store i32 1, i32* %15, align 4
  %16 = call i32 (...) @I2S_EXIT_CRITICAL()
  %17 = load i32, i32* @ESP_OK, align 4
  ret i32 %17
}

declare dso_local i32 @I2S_ENTER_CRITICAL(...) #1

declare dso_local i32 @I2S_EXIT_CRITICAL(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
